removed control icons, fixed featured item spacing

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,8 @@
   padding: 2%;
   text-align: center;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 
 .card-title {
